--- a/dao/src/main/resources/DBconnect.properties
+++ b/dao/src/main/resources/DBconnect.properties
@@ -1,3 +1,4 @@
 database.url=jdbc:mysql://localhost:3306/social_network?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 database.user=root
 database.password=12345678
+pool.size=5
