--- a/dao/src/main/resources/DBconnect.properties
+++ b/dao/src/main/resources/DBconnect.properties
@@ -1,4 +1,4 @@
-database.url=jdbc:mysql://localhost:3306/social_network?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-database.user=root
-database.password=12345678
+database.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_e005d7733619d8f?reconnect=true
+database.user=bbb5523adc7727
+database.password=c669d157
 pool.size=5
