--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -329,6 +329,12 @@
         <url-pattern>/SearchResultViewServlet</url-pattern>
     </servlet-mapping>
 
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/socnet</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
     <session-config>
         <session-timeout>10</session-timeout>
