--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -4,347 +4,44 @@
     <display-name>Social Network Web App</display-name>
 
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>/jsp/login.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>AccountJSP</servlet-name>
-        <jsp-file>/jsp/account.jsp</jsp-file>
+        <servlet-name>socnet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    <servlet>
-        <servlet-name>RegJSP</servlet-name>
-        <jsp-file>/jsp/reg.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>LoginJSP</servlet-name>
-        <jsp-file>/jsp/login.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateAccountJSP</servlet-name>
-        <jsp-file>/jsp/update-account.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>FriendsJSP</servlet-name>
-        <jsp-file>/jsp/friends.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GroupJSP</servlet-name>
-        <jsp-file>/jsp/group.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>CreateGroupJSP</servlet-name>
-        <jsp-file>/jsp/createGroup.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GroupsJSP</servlet-name>
-        <jsp-file>/jsp/groups.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateGroupJSP</servlet-name>
-        <jsp-file>/jsp/update-group.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>SearchJSP</servlet-name>
-        <jsp-file>/jsp/search.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>SearchResultJSP</servlet-name>
-        <jsp-file>/jsp/search-result.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>NavbarJSP</servlet-name>
-        <jsp-file>/jsp/navbar.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>AccountMessJSP</servlet-name>
-        <jsp-file>/jsp/accountMess.jsp</jsp-file>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.LoginServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.LogoutServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GetPhotoServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.GetPhotoServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>RegServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.RegServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateAccountServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.UpdateAccountServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>FriendsServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.FriendsServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateRoleServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.UpdateRoleServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GetPhotoGroupServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.GetPhotoGroupServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>CreateGroupServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.CreateGroupServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GroupActionServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.GroupActionServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateGroupServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.UpdateGroupServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>MessageServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.MessageServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GetImageMessageServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.GetImageMessageServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>AccountViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.AccountViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateAccountViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.UpdateAccountViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GroupViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.GroupViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateGroupViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.UpdateGroupViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>GroupsViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.GroupsViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>AccountMessViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.AccountMessViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>FriendsViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.FriendsViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>SearchResultViewServlet</servlet-name>
-        <servlet-class>com.getjavajob.training.web1803.webapp.servlets.view.SearchResultViewServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-
+    <servlet-mapping>
+        <servlet-name>socnet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
     <filter>
-        <filter-name>LoginFilter</filter-name>
-        <filter-class>com.getjavajob.training.web1803.webapp.filters.LoginFilter</filter-class>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
     </filter>
-
     <filter-mapping>
-        <filter-name>LoginFilter</filter-name>
+        <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-
-    <servlet-mapping>
-        <servlet-name>FriendsServlet</servlet-name>
-        <url-pattern>/FriendsServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GetPhotoServlet</servlet-name>
-        <url-pattern>/getPhoto</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RegJSP</servlet-name>
-        <url-pattern>/reg.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>LoginJSP</servlet-name>
-        <url-pattern>/login.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AccountJSP</servlet-name>
-        <url-pattern>/account.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>FriendsJSP</servlet-name>
-        <url-pattern>/friends.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GroupJSP</servlet-name>
-        <url-pattern>/group.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateAccountJSP</servlet-name>
-        <url-pattern>/updateAccount.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CreateGroupJSP</servlet-name>
-        <url-pattern>/createGroup.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GroupsJSP</servlet-name>
-        <url-pattern>/groups.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateGroupJSP</servlet-name>
-        <url-pattern>/updateGroup.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SearchJSP</servlet-name>
-        <url-pattern>/search.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SearchResultJSP</servlet-name>
-        <url-pattern>/searchResult.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>NavbarJSP</servlet-name>
-        <url-pattern>/navbar.jsp</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AccountMessJSP</servlet-name>
-        <url-pattern>/accountMess.jsp</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
-        <url-pattern>/LogoutServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RegServlet</servlet-name>
-        <url-pattern>/RegServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateAccountServlet</servlet-name>
-        <url-pattern>/UpdateAccountServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateRoleServlet</servlet-name>
-        <url-pattern>/UpdateRoleServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GetPhotoGroupServlet</servlet-name>
-        <url-pattern>/GetPhotoGroupServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CreateGroupServlet</servlet-name>
-        <url-pattern>/CreateGroupServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GroupActionServlet</servlet-name>
-        <url-pattern>/GroupActionServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateGroupServlet</servlet-name>
-        <url-pattern>/UpdateGroupServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>MessageServlet</servlet-name>
-        <url-pattern>/MessageServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GetImageMessageServlet</servlet-name>
-        <url-pattern>/GetImageMessageServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AccountViewServlet</servlet-name>
-        <url-pattern>/AccountViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateAccountViewServlet</servlet-name>
-        <url-pattern>/UpdateAccountViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GroupViewServlet</servlet-name>
-        <url-pattern>/GroupViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateGroupViewServlet</servlet-name>
-        <url-pattern>/UpdateGroupViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>GroupsViewServlet</servlet-name>
-        <url-pattern>/GroupsViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AccountMessViewServlet</servlet-name>
-        <url-pattern>/AccountMessViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>FriendsViewServlet</servlet-name>
-        <url-pattern>/FriendsViewServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SearchResultViewServlet</servlet-name>
-        <url-pattern>/SearchResultViewServlet</url-pattern>
-    </servlet-mapping>
-
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
     <resource-ref>
         <description>DB Connection</description>
         <res-ref-name>jdbc/socnet</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
-
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>resources/xml/socnet-context.xml</param-value>
-    </context-param>
-
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
     <session-config>
         <session-timeout>10</session-timeout>
     </session-config>
